# rat

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.en.md  README.md  build.rs  rat.spec
rat/: Cargo.toml
rat/src/: io_util.rs  ioblksize.rs  lib.rs  main.rs
tests/: tests.rs
tests/fixtures/: 256.txt
tests/scripts/: functional_test.sh  performance_test.sh  performance_test_multithreaded.sh  performance_test_singlethreaded.sh
