[package]
name = "rat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.0", features = ["cargo"] }
nix  = { version = "0.27.1", features = ["fs"] }
lazy_static = { version = "1.4" }

[[bin]]
name = "rat"
path = "src/main.rs"

[features]
default = []
